--- a/recipes/kung-pao-chicken.html
+++ b/recipes/kung-pao-chicken.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Kung pao Chicken</h1>
-    <img src="/recipes/img/kpao-chicken.jpeg" alt="kung-pao-chicken">
+    <img src="/recipes/img/kpao-chicken.jpeg" alt="">
 </body>
 </html>
