Added images on every recipe

--- a/recipes/tarta-jyq.html
+++ b/recipes/tarta-jyq.html
@@ -8,5 +8,6 @@
 </head>
 <body>
     <h1>Tarta de jamon y queso</h1>
+    <img src="/recipes/img/tarta-jyq.png" alt="Tarta-de-jamon-y-queso">
 </body>
 </html>
