Added Description, ingredients and steps

--- a/recipes/carrot-cake.html
+++ b/recipes/carrot-cake.html
@@ -9,5 +9,34 @@
 <body>
     <h1>Carrot Cake</h1>
     <img src="/recipes/img/carrot-cake.jpeg" alt="Carrot-cake">
+    <h2>Description</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat ullam, culpa ut debitis rem animi error pariatur ipsum omnis? Nostrum accusantium ratione in quos placeat. Illum dolorum quaerat at numquam.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>2 cups white sugar</li>
+        <li>3/4 cup vegetable oil</li>
+        <li>3 eggs</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>3/4 buttermilk</li>
+        <li>2 cups grated carrots</li>
+        <li>1 cup flaked coconut</li>
+        <li>1 (15 ounce) can crushed pineapple, drained</li>
+        <li>2 cups all-purpose flour</li>
+        <li>2 teaspoons baking soda</li>
+        <li>2 teaspoon ground cinnamon</li>
+        <li>1 1/2 teaspoons salt</li>
+        <li>1 cup chopped walnuts</li>
+        <li>1/2 cup butter</li>
+        <li>1 (8 ounce) package cream cheese</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>4 cups confectioners' sugar</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li><p>Preheat oven to 350 degrees F (175 degrees C). Grease a 9x13 inch baking pan. Set aside.</p></li>
+        <li><p>In a large bowl, mix together sugar, oil, eggs, vanilla, and buttermilk. Stir in carrots, coconut, vanilla, and pineapple. In a separate bowl, combine flour, baking soda, cinnamon, and salt; gently stir into carrot mixture. Stir in chopped nuts. Spread batter into prepared pan.</p></li>
+        <li><p>Bake for 55 minutes or until toothpick inserted into cake comes out clean. Remove from oven, and set aside to cool.</p></li>
+        <li><p>In a medium mixing bowl, combine butter or margarine, cream cheese, vanilla, and confectioners sugar. Blend until creamy. Frost cake while still in the pan.</p></li>
+    </ol>
 </body>
 </html>
