--- a/recipes/carrot-cake.html
+++ b/recipes/carrot-cake.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Carrot Cake</h1>
-    <img src="/recipes/img/carrot-cake.jpeg" alt="Carrot-cake">
+    <img src="/recipes/img/carrot-cake.jpeg" width="100%" alt="Carrot-cake">
     <h2>Description</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat ullam, culpa ut debitis rem animi error pariatur ipsum omnis? Nostrum accusantium ratione in quos placeat. Illum dolorum quaerat at numquam.</p>
     <h2>Ingredients</h2>
