--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,6 +8,46 @@
 </head>
 <body>
     <h1>Pizza</h1>
-    <img src="/recipes/img/pizza.jpg" alt="pizza">
+    <img src="/recipes/img/pizza.jpg" width="100%" alt="pizza">
+    <h2>Description</h2>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, reprehenderit dolores quasi voluptatum veniam libero tenetur quas dignissimos atque quis dolor iure saepe commodi! Exercitationem delectus et blanditiis fugiat maxime?</p>
+    <h2>Ingredients</h2>
+    <h3>Pizza</h3>
+    <ul>
+        <li>½ (12 ounce) can CONTADINA® Tomato Paste</li>
+        <li>1 teaspoon dried oregano, crushed</li>
+        <li>1 teaspoon dried basil, crushed</li>
+        <li>½ teaspoon garlic powder</li>
+        <li>½ teaspoon onion powder</li>
+        <li>½ teaspoon sugar</li>
+        <li>½ teaspoon salt</li>
+        <li>¼ teaspoon black pepper</li>
+    </ul>
+    <h3>Toppings</h3>
+    <ul>
+        <li>1 (6 ounces) Pepperoni</li>
+        <li>1 cup shredded mozzarella cheese, or more to taste</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>
+            <p>For sauce: Combine all sauce ingredients with 1/2 cup water in a medium bowl; set aside for flavors to develop while making crust. Freeze remaining paste .</p>
+        </li>
+        <li>
+            <p>For crusts: Combine 2 cups of flour with the dry yeast, sugar and salt. Add the water and oil and mix until well blended (about 1 minute). Gradually add enough remaining flour slowly, until a soft, sticky dough ball is formed.</p>
+        </li>
+        <li>
+            <p>Knead for about 4 minutes, on a floured surface, until dough is smooth and elastic. Add more flour, if needed. (If using RapidRise® Yeast, let dough rest, covered, for 10 minutes.)</p>
+        </li>
+        <li>
+            <p>Divide dough in half. Pat each half (with floured hands) into a 12-inch greased pizza pan OR roll dough to fit pans.</p>
+        </li>
+        <li>
+            <p>For pizzas: Preheat oven to 425 degrees F. Top crusts with sauce, pepperoni and cheese.</p>
+        </li>
+        <li>
+            <p>Bake for 18 to 20 minutes until crusts are browned and cheese is bubbly. For best results, rotate pizza pans between top and bottom oven racks halfway through baking.</p>
+        </li>
+    </ol>
 </body>
 </html>
