Edit recipe page with some css foundations

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
     <head>
         <meta charset="utf-8">
         <title>Recipe Page</title>
+        <link rel="stylesheet" href="/css/style.css">
     </head>
     <body>
+        
         <h1>Odin Recipes</h1>
+        <img src="/img/recipes.jpg" alt="recipes-photo">
         <ul>
             <li><a href="/recipes/carrot-cake.html">Carrot cake</a> </li>
             <li><a href="/recipes/kung-pao-chicken.html">Kung pao chicken</a> </li>
