--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -5,28 +5,29 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pizza</title>
+    <link rel="stylesheet" href="/recipes/style.css">
 </head>
 <body>
-    <h1>Pizza</h1>
+    <h1 id="home">Pizza</h1>
     <img src="/recipes/img/pizza.jpg" width="100%" alt="pizza">
     <h2>Description</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, reprehenderit dolores quasi voluptatum veniam libero tenetur quas dignissimos atque quis dolor iure saepe commodi! Exercitationem delectus et blanditiis fugiat maxime?</p>
     <h2>Ingredients</h2>
     <h3>Pizza</h3>
     <ul>
-        <li>½ (12 ounce) can CONTADINA® Tomato Paste</li>
-        <li>1 teaspoon dried oregano, crushed</li>
-        <li>1 teaspoon dried basil, crushed</li>
-        <li>½ teaspoon garlic powder</li>
-        <li>½ teaspoon onion powder</li>
-        <li>½ teaspoon sugar</li>
-        <li>½ teaspoon salt</li>
-        <li>¼ teaspoon black pepper</li>
+        <li><p>½ (12 ounce) can CONTADINA® Tomato Paste</p></li>
+        <li><p>1 teaspoon dried oregano, crushed</p></li>
+        <li><p>1 teaspoon dried basil, crushed</p></li>
+        <li><p>½ teaspoon garlic powder</p></li>
+        <li><p>½ teaspoon onion powder</p></li>
+        <li><p>½ teaspoon sugar</p></li>
+        <li><p>½ teaspoon salt</p></li>
+        <li><p>¼ teaspoon black pepper</p></li>
     </ul>
     <h3>Toppings</h3>
     <ul>
-        <li>1 (6 ounces) Pepperoni</li>
-        <li>1 cup shredded mozzarella cheese, or more to taste</li>
+        <li><p>1 (6 ounces) Pepperoni</p></li>
+        <li><p>1 cup shredded mozzarella cheese, or more to taste</p></li>
     </ul>
     <h2>Steps</h2>
     <ol>
@@ -49,5 +50,7 @@
             <p>Bake for 18 to 20 minutes until crusts are browned and cheese is bubbly. For best results, rotate pizza pans between top and bottom oven racks halfway through baking.</p>
         </li>
     </ol>
+    <a href="/index.html"> << Main Page</a>
+    <a href="#home">Move to Top</a>
 </body>
 </html>
