--- a/recipes/carrot-cake.html
+++ b/recipes/carrot-cake.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Carrot Cake</title>
+    <link rel="stylesheet" href="/recipes/style.css">
 </head>
 <body>
-    <h1>Carrot Cake</h1>
-    <img src="/recipes/img/carrot-cake.jpeg" width="100%" alt="Carrot-cake">
+    <h1 id="home">Carrot Cake</h1>
+    <img src="/recipes/img/carrot-cake.jpeg" alt="Carrot-cake">
     <h2>Description</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat ullam, culpa ut debitis rem animi error pariatur ipsum omnis? Nostrum accusantium ratione in quos placeat. Illum dolorum quaerat at numquam.</p>
     <h2>Ingredients</h2>
@@ -38,5 +39,7 @@
         <li><p>Bake for 55 minutes or until toothpick inserted into cake comes out clean. Remove from oven, and set aside to cool.</p></li>
         <li><p>In a medium mixing bowl, combine butter or margarine, cream cheese, vanilla, and confectioners sugar. Blend until creamy. Frost cake while still in the pan.</p></li>
     </ol>
+    <a href="/index.html"> << Main Page</a>
+    <a href="#home">Move to Top</a>
 </body>
 </html>
