--- a/recipes/kung-pao-chicken.html
+++ b/recipes/kung-pao-chicken.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kung pao Chicken</title>
+    <link rel="stylesheet" href="/recipes/style.css">
 </head>
 <body>
-    <h1>Kung pao Chicken</h1>
-    <img src="/recipes/img/kpao-chicken.jpeg" width="100%" alt="">
+    <h1 id="home">Kung pao Chicken</h1>
+    <img src="/recipes/img/kpao-chicken.jpeg" alt="">
     <h2>Description</h2>
     <p>Spicy chicken with peanuts, similar to what is served in Chinese restaurants. It is easy to make, and you can be as sloppy with the measurements as you want. They reduce to a nice, thick sauce. Substitute cashews for peanuts, or bamboo shoots for the water chestnuts. </p>
     <h2>Ingredients</h2>
@@ -32,5 +33,7 @@
         <li><p>To Make Sauce: In a small bowl combine 1 tablespoon wine, 1 tablespoon soy sauce, 1 tablespoon oil, 1 tablespoon cornstarch/water mixture, chili paste, vinegar and sugar. Mix together and add green onion, garlic, water chestnuts and peanuts. In a medium skillet, heat sauce slowly until aromatic.</p></li>
         <li>Meanwhile, remove chicken from marinade and saute in a large skillet until meat is white and juices run clear. When sauce is aromatic, add sauteed chicken to it and let simmer together until sauce thickens.</li>
     </ol>
+    <a href="/index.html"> << Main Page</a>
+    <a href="#home">Move to Top</a>
 </body>
 </html>
